--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,3 +34,8 @@ redis.password=123456
 redis.poolMaxTotal=1000
 redis.poolMaxIdle=500
 redis.user=default
+#SMS
+aliyun.sms.accessKeyId=
+aliyun.sms.accessKeySecret=
+aliyun.sms.signName=
+aliyun.sms.templates.key1.templateCode=
